minha tela e imagem feita em css html purin

--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Site que o Cosme pediu</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- Hero -->
+    <header class="hero">
+      <h1>Bem-vindo ao site que o Cosme obrigou a fazer puro -_-</h1>
+      <p>Este é um exemplo do ódio que todos os devs têm do HTML e CSS puro.</p>
+    </header>
+
+    <!-- Botões -->
+    <section class="botoes">
+      <a href="#" class="btn">Telinha Wallace</a>
+      <a href="#" class="btn btn-secundario">Telinha Pedro</a>
+    </section>
+
+    <!-- Imagem centralizada -->
+    <section class="imagem-container">
+      <img src="foto.webp" alt="vacalo" class="foto" />
+    </section>
+
+    <!-- Texto abaixo da imagem -->
+    <section class="texto">
+      <h2>Apenas o Melhor esporte do mundo!</h2>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+      <p>
+        &copy; 2025 Site feito com muito ódio e rancor de HTML e CSS puro. Todos
+        os direitos reservados.
+      </p>
+    </footer>
+  </body>
 </html>
