--- a/dev1.html
+++ b/dev1.html
@@ -1,84 +1,22 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <title>Página com Header e Footer</title>
-  <style>
-    /* Reset básico */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      background-color: #f4f4f4;
-      color: #333;
-    }
-
-    /* Header */
-    header {
-      background: #0077cc;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-
-    header h1 {
-      margin-bottom: 10px;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 0 15px;
-      font-weight: bold;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    /* Conteúdo principal */
-    main {
-      padding: 20px;
-      min-height: 400px; /* só pra dar espaço */
-    }
-
-    /* Footer */
-    footer {
-      background: #333;
-      color: white;
-      text-align: center;
-      padding: 15px;
-      position: relative;
-      bottom: 0;
-      width: 100%;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="dev1.css"/>
 </head>
 <body>
-  <!-- Cabeçalho -->
-  <header>
-    <h1>Meu Site</h1>
-    <nav>
-      <a href="#">Início</a>
-      <a href="#">Sobre</a>
-      <a href="#">Contato</a>
-    </nav>
-  </header>
 
-  <!-- Conteúdo principal -->
-  <main>
-    <h2>Bem-vindo!</h2>
-    <p>Este é um exemplo de página criada com HTML e CSS puro, contendo um header, um footer e conteúdo principal.</p>
-  </main>
+    <header class="header">
+        <p>wallace</p>   
+    </header>
 
-  <!-- Rodapé -->
-  <footer>
-    <p>&copy; 2025 - Todos os direitos reservados.</p>
-  </footer>
+    <section>
+        <img class="img2" src="image/img2.jpg" alt="Minha foto">
+</section>
+
+    <footer class="footer">Está pagina foi feita por Wallace . </footer>
+    
 </body>
 </html>
